--- a/Smart Order/Smart Order/Base.lproj/Main.storyboard
+++ b/Smart Order/Smart Order/Base.lproj/Main.storyboard
@@ -1,33 +1,166 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="1am-cc-zxW">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <scene sceneID="sZ3-o8-Xed">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Smart_Order" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="ci5-9P-OY9" customClass="ViewController" customModule="Smart_Order" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="SRj-zo-5gy"/>
+                        <viewControllerLayoutGuide type="bottom" id="iIo-iv-F5b"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="aZS-0c-LmI">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x1i-W7-zEF">
-                                <rect key="frame" x="168" y="319" width="38" height="30"/>
-                                <state key="normal" title="Login"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="aad-yZ-v2h">
+                                <rect key="frame" x="-4" y="64" width="383" height="563"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="jWh-IN-8tZ">
+                                    <size key="itemSize" width="179" height="299"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="YZM-vE-lac">
+                                        <rect key="frame" x="0.0" y="64" width="179" height="299"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="179" height="299"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="10" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="myL-Q8-4Jl">
+                                                    <rect key="frame" x="0.0" y="278" width="179" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cake" translatesAutoresizingMaskIntoConstraints="NO" id="lJy-i6-byN">
+                                                    <rect key="frame" x="8" y="0.0" width="163" height="270"/>
+                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="270" id="Rhf-ve-6MV"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="lJy-i6-byN" firstAttribute="leading" secondItem="YZM-vE-lac" secondAttribute="leadingMargin" id="0Jw-Mg-c80"/>
+                                            <constraint firstItem="myL-Q8-4Jl" firstAttribute="top" secondItem="lJy-i6-byN" secondAttribute="bottom" constant="8" id="4Mq-f7-0aI"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="lJy-i6-byN" secondAttribute="trailing" id="OOm-NU-8co"/>
+                                            <constraint firstItem="myL-Q8-4Jl" firstAttribute="leading" secondItem="YZM-vE-lac" secondAttribute="leadingMargin" constant="-8" id="R6b-sx-yAY"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="myL-Q8-4Jl" secondAttribute="bottom" constant="-8" id="Tsc-hz-ahc"/>
+                                            <constraint firstItem="lJy-i6-byN" firstAttribute="top" secondItem="YZM-vE-lac" secondAttribute="topMargin" constant="-8" id="ozy-Sx-02e"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="myL-Q8-4Jl" secondAttribute="trailing" constant="-8" id="xyA-4a-fGo"/>
+                                        </constraints>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="iIo-iv-F5b" firstAttribute="top" secondItem="aad-yZ-v2h" secondAttribute="bottom" constant="40" id="4eI-6e-JMe"/>
+                            <constraint firstItem="aad-yZ-v2h" firstAttribute="leading" secondItem="aZS-0c-LmI" secondAttribute="leadingMargin" constant="-20" id="8ec-68-80U"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="aad-yZ-v2h" secondAttribute="trailing" constant="-20" id="Ucl-5h-NnW"/>
+                            <constraint firstItem="aad-yZ-v2h" firstAttribute="top" secondItem="SRj-zo-5gy" secondAttribute="bottom" id="atx-au-fNE"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="gqG-t8-bqe"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="collectionView" destination="aad-yZ-v2h" id="s85-bA-dyp"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="p6Y-qF-eYg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="547.5" y="-111.5"/>
+        </scene>
+        <!--Category View Controller-->
+        <scene sceneID="JE5-5h-Jtl">
+            <objects>
+                <viewController storyboardIdentifier="Category" id="2rM-gB-2fh" customClass="CategoryViewController" customModule="Smart_Order" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="j59-0Y-BHs"/>
+                        <viewControllerLayoutGuide type="bottom" id="fMf-Iy-Fdl"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="rIr-Ws-37O">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gf2-p5-d2i">
+                                <rect key="frame" x="191" y="637" width="184" height="30"/>
+                                <color key="backgroundColor" red="0.43921568630000002" green="0.53725490200000003" blue="0.55294117649999996" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Order"/>
+                                <connections>
+                                    <action selector="orderButton:" destination="2rM-gB-2fh" eventType="touchUpInside" id="e4w-Cu-gmt"/>
+                                </connections>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BwH-AZ-NSq">
+                                <rect key="frame" x="-12" y="-20" width="399" height="657"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ixI-N2-pNW">
+                                <rect key="frame" x="0.0" y="637" width="192" height="30"/>
+                                <color key="backgroundColor" red="0.43921568630000002" green="0.53725490200000003" blue="0.55294117649999996" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Add in Stock"/>
+                                <connections>
+                                    <action selector="addInStock:" destination="2rM-gB-2fh" eventType="touchUpInside" id="WkR-3Z-E18"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="fMf-Iy-Fdl" firstAttribute="top" secondItem="Gf2-p5-d2i" secondAttribute="bottom" id="HRP-Fn-O4h"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Gf2-p5-d2i" secondAttribute="trailing" constant="-20" id="Lt8-15-iTr"/>
+                            <constraint firstItem="ixI-N2-pNW" firstAttribute="top" secondItem="BwH-AZ-NSq" secondAttribute="bottom" id="R9i-e3-DAS"/>
+                            <constraint firstItem="ixI-N2-pNW" firstAttribute="leading" secondItem="rIr-Ws-37O" secondAttribute="leadingMargin" constant="-20" id="Tkx-JC-Aln"/>
+                            <constraint firstItem="BwH-AZ-NSq" firstAttribute="top" secondItem="rIr-Ws-37O" secondAttribute="topMargin" constant="-20" id="WKo-a9-Jl4"/>
+                            <constraint firstItem="Gf2-p5-d2i" firstAttribute="top" secondItem="BwH-AZ-NSq" secondAttribute="bottom" id="Yh9-KH-b1r"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="BwH-AZ-NSq" secondAttribute="trailing" constant="-28" id="ahc-Ft-nGK"/>
+                            <constraint firstItem="fMf-Iy-Fdl" firstAttribute="top" secondItem="ixI-N2-pNW" secondAttribute="bottom" id="f18-UL-n6L"/>
+                            <constraint firstItem="BwH-AZ-NSq" firstAttribute="leading" secondItem="rIr-Ws-37O" secondAttribute="leadingMargin" constant="-28" id="hEC-16-CEE"/>
+                            <constraint firstItem="ixI-N2-pNW" firstAttribute="top" secondItem="BwH-AZ-NSq" secondAttribute="bottom" id="jmh-6N-HCM"/>
+                            <constraint firstItem="Gf2-p5-d2i" firstAttribute="leading" secondItem="ixI-N2-pNW" secondAttribute="trailing" constant="-1" id="zUK-kn-awd"/>
+                        </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="tableView" destination="BwH-AZ-NSq" id="sLe-I1-1UM"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pIN-Cn-knb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1093.5" y="-111.5"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="cee-9a-Vtq">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1am-cc-zxW" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hi3-7C-309">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ci5-9P-OY9" kind="relationship" relationship="rootViewController" id="fxd-qe-BOP"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="t1v-Sx-iLH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-15" y="-111"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="cake" width="64" height="64"/>
+    </resources>
 </document>
